gcc/testsuite/rust/rustc/ui/lifetimes/issue-107492-default-value-for-lifetime_dg.rs
pub struct DefaultLifetime<'a, 'b = 'static> {
// { dg-error "" "" { target *-*-* } .-1 }
    _marker: std::marker::PhantomData<&'a &'b ()>,
}

fn main(){}

